[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unary_theme"
version = "0.1.0"
description = "A custom Sphinx theme with banner and navigation"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sphinx>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/yourrepo"
Repository = "https://github.com/yourusername/yourrepo"

[project.entry-points."sphinx.html_themes"]
custom_theme = "docs._themes.custom_theme"

[tool.setuptools.packages.find]
where = ["."]
include = ["docs._themes.custom_theme*"]

[tool.setuptools.package-data]
"docs._themes.custom_theme" = [
    "theme.conf",
    "*.html",
    "static/*",
]
